--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinDog</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
     <div class="container col-xxl-8 px-4 pt-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 pt-3">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./images/iphone6.png" class="d-block mx-lg-auto img-fluid pb-5 iphone" alt="Bootstrap Themes" width="250"
+          <img src="./iphone6.png" class="d-block mx-lg-auto img-fluid pb-5 iphone" alt="Bootstrap Themes" width="250"
             loading="lazy">
         </div>
         <div class="col-lg-6">
@@ -108,23 +108,23 @@
       <div class="p-5 text-center bg-body-tertiary">
         <div class="container py-5">
           <h2 class="text-body-emphasis">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
-          <img class="dog-profile" src="./images/dog-img.jpg" alt="dog" height="100px">
+          <img class="dog-profile" src="./dog-img.jpg" alt="dog" height="100px">
           <p class="col-lg-8 mx-auto lead">
             Pebbles, New York</p>
         </div>
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-sm-12 mb-5">
-              <img src="./images/techcrunch.png" alt="techcrunch" height="30">
+              <img src="./techcrunch.png" alt="techcrunch" height="30">
             </div>
             <div class="col-lg-3 col-sm-12 mb-5">
-              <img src="./images/mashable.png" alt="mashable" height="30">
+              <img src="./mashable.png" alt="mashable" height="30">
             </div>
             <div class="col-lg-3 col-sm-12 mb-5">
-              <img src="./images/tnw.png" alt="tnw" height="30">
+              <img src="./tnw.png" alt="tnw" height="30">
             </div>
             <div class="col-lg-3 col-sm-12 mb-5">
-              <img src="./images/bizinsider.png" alt="bizinsider" height="30">
+              <img src="./bizinsider.png" alt="bizinsider" height="30">
             </div>
           </div>
         </div>
